# ToramHack

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  hooks.h  main.cpp  strutil.h
app/src/main/cpp/ByNameModding/: BNM.cpp  BNM_settings.hpp  Loading.cpp  MonoStructures.cpp  Utils.cpp
app/src/main/cpp/ByNameModding/BNM_data/utf8/: cpp17.h
app/src/main/cpp/ByNameModding/include/BNM/UserSettings/: GlobalSettings.hpp
app/src/main/cpp/KittyMemory/: KittyMemory.hpp  KittyUtils.cpp
gradle/wrapper/: gradle-wrapper.properties
module/: module.prop  post-fs-data.sh
